covered class point methods and geom utils functions with simple tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(TrianglesIntersections)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(COMMON_LINK_FLAGS "-lm")
+
 include_directories(common_includes)
 include_directories(realizations/geom_primitives)
 include_directories(realizations)
@@ -17,3 +19,4 @@ add_subdirectory(3dPartyModules/spdlog)
 # --------------------------------------------
 
 add_subdirectory(usecase)
+add_subdirectory(tests)
