--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,12 +10,12 @@ add_subdirectory(plane)
 add_subdirectory(triangle)
 add_subdirectory(bruteforce_solution)
 
-add_test(NAME utils_tests         COMMAND utils_tests)
-add_test(NAME point_tests         COMMAND point_tests)
-add_test(NAME segment_tests       COMMAND segment_tests)
-add_test(NAME plane_tests         COMMAND plane_tests)
-add_test(NAME triangle_tests      COMMAND triangle_tests)
-add_test(NAME bruteforce_solution COMMAND bruteforce_solution)
+add_test(NAME utils_tests               COMMAND utils_tests)
+add_test(NAME point_tests               COMMAND point_tests)
+add_test(NAME segment_tests             COMMAND segment_tests)
+add_test(NAME plane_tests               COMMAND plane_tests)
+add_test(NAME triangle_tests            COMMAND triangle_tests)
+add_test(NAME bruteforce_solution_tests COMMAND bruteforce_solution_tests)
 
 add_custom_target(run_all_tests
   COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
