Decided not to use heavy logger lib and stay with my own

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "3dPartyModules/spdlog"]
-	path = 3dPartyModules/spdlog
-	url = https://github.com/gabime/spdlog.git
+[submodule "3dPartyModules/LoggerLib"]
+	path = 3dPartyModules/LoggerLib
+	url = git@github.com:Kunakbaev/LoggerLib.git
+	branch = version_2
