--- a/tests/plane/CMakeLists.txt
+++ b/tests/plane/CMakeLists.txt
@@ -8,6 +8,6 @@ set_target_properties( plane_tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${BUILD_
 target_link_libraries(plane_tests PRIVATE
   GTest::gtest
   GTest::gtest_main
-  spdlog::spdlog
+  my_loglib
   Threads::Threads
 )
