--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -8,6 +8,6 @@ set_target_properties( utils_tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${BUILD_
 target_link_libraries(utils_tests PRIVATE
   GTest::gtest
   GTest::gtest_main
-  spdlog::spdlog
+  my_loglib
   Threads::Threads
 )
