Finished implementing BVH_optimized_solution, covered it with tests, compared on example test with correct ans

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -16,17 +16,19 @@ function(create_unit_test test_name source_file)
     GTest::gtest_main
     my_loglib
     Threads::Threads
+    my_project_includes
   )
   add_test(NAME ${test_name} COMMAND ${test_name})
 endfunction()
 
-create_unit_test(utils_unit_test               utils_tests.cpp)
-create_unit_test(point_unit_test               point_tests.cpp)
-create_unit_test(segment_unit_test             segment_tests.cpp)
-create_unit_test(plane_unit_test               plane_tests.cpp)
-create_unit_test(triangle_unit_test            triangle_tests.cpp)
-create_unit_test(bruteforce_solution_unit_test bruteforce_solution_tests.cpp)
-create_unit_test(AABB_unit_test                AABB_tests.cpp)
+create_unit_test(utils_unit_test                  utils_tests.cpp)
+create_unit_test(point_unit_test                  point_tests.cpp)
+create_unit_test(segment_unit_test                segment_tests.cpp)
+create_unit_test(plane_unit_test                  plane_tests.cpp)
+create_unit_test(triangle_unit_test               triangle_tests.cpp)
+create_unit_test(bruteforce_solution_unit_test    bruteforce_solution_tests.cpp)
+create_unit_test(AABB_unit_test                   AABB_tests.cpp)
+create_unit_test(optimized_BVH_solution_unit_test optimized_BVH_solution_tests.cpp)
 
 add_custom_target(run_all_tests
   COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
